rtg_tests/negative/return_count/go.mod
module example.com/rtgtests/negative/returncount

go 1.25
